# mini-c-shell

./: .gitignore  LICENSE  README.md  meson.build
shell/: meson.build
shell/include/: nothing.h
shell/src/: source.c
